--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "next",
     "build": "next build",
+    "postbuild": "next-on-netlify",
     "start": "next start"
   },
   "keywords": [],
@@ -16,6 +17,7 @@
     "axios": "^0.19.2",
     "isomorphic-fetch": "^2.2.1",
     "next": "^9.4.4",
+    "next-on-netlify": "^2.3.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1"
   }
